--- a/WinterAdventurer.Library/WinterAdventurer.Library.csproj
+++ b/WinterAdventurer.Library/WinterAdventurer.Library.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="7.0.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="PDFsharp" Version="6.0.0" />
+    <PackageReference Include="PDFsharp-MigraDoc" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
