--- a/WinterAdventurer/WinterAdventurer.csproj
+++ b/WinterAdventurer/WinterAdventurer.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\WinterAdventurer.Library\WinterAdventurer.Library.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MudBlazor" Version="7.15.0" />
+  </ItemGroup>
+
 </Project>
