--- a/WinterAdventurer.Library/WinterAdventurer.Library.csproj
+++ b/WinterAdventurer.Library/WinterAdventurer.Library.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <EmbeddedResource Include="Resources/Fonts/**/*.ttf" />
+    <EmbeddedResource Include="EventSchemas/**/*.json" />
   </ItemGroup>
 
 </Project>
