--- a/WinterAdventurer.E2ETests/WinterAdventurer.E2ETests.csproj
+++ b/WinterAdventurer.E2ETests/WinterAdventurer.E2ETests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="Microsoft.Playwright.MSTest" Version="1.56.0" />
     <PackageReference Include="MSTest" Version="3.6.4" />
+    <PackageReference Include="EPPlus" Version="8.3.1" />
   </ItemGroup>
 
   <ItemGroup>
