--- a/WinterAdventurer.Library/WinterAdventurer.Library.csproj
+++ b/WinterAdventurer.Library/WinterAdventurer.Library.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AnalysisMode>Recommended</AnalysisMode>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
 
     <!-- Suppress overly strict design rules for DTOs/models while keeping security/performance rules -->
     <!-- CA1002: Don't expose List<T> - overly strict for data models -->
