--- a/WinterAdventurer/WinterAdventurer.csproj
+++ b/WinterAdventurer/WinterAdventurer.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <!-- Workaround for .NET 10 preview missing prune package data -->
     <AllowMissingPrunePackageData>true</AllowMissingPrunePackageData>
+    <AnalysisMode>Recommended</AnalysisMode>
 
     <!-- Suppress less critical analyzer warnings for web project -->
     <!-- Same rationale as Library project - focus on security rules, suppress design/style -->
