--- a/WinterAdventurer.Test/WinterAdventurer.Test.csproj
+++ b/WinterAdventurer.Test/WinterAdventurer.Test.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AnalysisMode>Recommended</AnalysisMode>
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
